--- a/package.json
+++ b/package.json
@@ -1,19 +1,13 @@
 {
   "name": "redux-todomvc",
   "version": "1.0.0",
-  "description": "Todo MVC app implemented with React and Redux",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-redux": "^4.0.1",
-    "redux": "^3.0.5"
-  },
   "devDependencies": {
     "babel": "^6.1.18",
     "babel-core": "^6.2.1",
@@ -21,7 +15,20 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "babel-preset-stage-0": "^6.3.13",
+    "css-loader": "^0.23.0",
+    "file-loader": "^0.8.5",
+    "html-webpack-plugin": "^1.7.0",
+    "less-loader": "^2.2.2",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "webpack-merge": "^0.3.2"
+  },
+  "dependencies": {
+    "moment": "^2.10.6",
+    "node-uuid": "^1.4.7",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "react-widgets": "^3.1.3"
   }
 }
