--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "webpack-merge": "^0.3.2"
   },
   "dependencies": {
+    "bootstrap": "^3.3.6",
     "moment": "^2.10.6",
     "node-uuid": "^1.4.7",
     "react": "^0.14.3",
+    "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.3",
     "react-widgets": "^3.1.3"
   }
