--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "redux-todomvc",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.jsx",
   "scripts": {
     "start": "webpack-dev-server"
   },
@@ -16,8 +16,10 @@
     "babel-preset-react": "^6.1.18",
     "babel-preset-stage-0": "^6.3.13",
     "css-loader": "^0.23.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^1.7.0",
+    "less": "^2.5.3",
     "less-loader": "^2.2.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
@@ -27,7 +29,6 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "moment": "^2.10.6",
-    "node-uuid": "^1.4.7",
     "react": "^0.14.3",
     "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.3",
