--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react": "^0.14.3",
     "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.3",
-    "react-widgets": "^3.1.3"
+    "react-redux": "^4.4.0",
+    "react-widgets": "^3.1.3",
+    "redux": "^3.3.1"
   }
 }
