--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.3.2"
   },
   "dependencies": {
